<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mc.virtuali.Home"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:text="@string/title"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:paddingTop="9dp"
        android:paddingLeft="10dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:text="@string/camera"
            android:id="@+id/bcamera" />

        <Button
            android:id="@+id/bgallery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/bcamera"
            android:layout_marginTop="30dp"
            android:text="@string/gallery" />

        <Button
            android:id="@+id/bexit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/bgallery"
            android:layout_marginTop="30dp"
            android:text="@string/exit" />

    </RelativeLayout>


</LinearLayout>
